# woodpecker-mcp

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmark/: .env.sample  .gitignore  README.md  compare.sh  fault.py  inject.sh  run.sh  scenarios.py  score_holmes.py  sweep.py  topology.py  verify.py
docs/: CONFIGURATION.md
examples/: holmesgpt-toolset.yaml  k8s-deployment.yaml  topology.example.json
tests/: smoke_mcp.py  test_benchmark.py  test_build.py  test_config.py  test_diagnose.py  test_scaffold.py  test_schema.py  test_sources.py
woodpecker_mcp/: __init__.py  build.py  cli.py  config.py  diagnose.py  scaffold.py  schema.py  server.py  store.py
woodpecker_mcp/sources/: __init__.py  base.py  datadog.py  docker_compose.py  kubernetes.py  prometheus.py  traces.py
